--- a/source/_posts/6-S081.md
+++ b/source/_posts/6-S081.md
@@ -7,279 +7,7 @@ author:
  - LeoChamp
 ---
 
-# Lec01
+## [LEC01](https://mp.weixin.qq.com/s?__biz=MzkyMDY3MjQ0OQ==&mid=2247484018&idx=1&sn=6015e6b757a4d9575dfeae9c65436aa5&chksm=c18e03dcf6f98acac01dbacb0fbd545effff5d1582b5ccc5040db278ea2da47cbbd3f083b768#rd)
 
-## 一、**Preparation**: [Read chapter 1](https://pdos.csail.mit.edu/6.S081/2024/xv6/book-riscv-rev4.pdf)
+## [LEC02](https://mp.weixin.qq.com/s?__biz=MzkyMDY3MjQ0OQ==&mid=2247484025&idx=1&sn=46e17e7b9d99ad9637e300e7e6807629&chksm=c18e03d7f6f98ac1467886141accf1f73a3b26c0aa2ad1aacf3718e4eceb19df89aea0c88032#rd)
 
-
-
-### (一) Memory And Process
-
-- **系统调用返回值**：如果没有错误，系统调用返回 0；如果有错误，返回 -1。
-- **fork 系统调用**：创建一个新进程，返回新进程的 PID。在父进程中，fork 返回新进程的 PID；在子进程中，fork 返回 0。`fork` 函数在父进程、子进程中都返回（一次调用两次返回）。
-- **exit 系统调用**：使调用进程停止执行并释放资源（ 诸如内存和打开文件在内的资源  ），接受一个整数状态参数，0 表示成功，1 表示失败。
-- **wait 系统调用**：返回已退出（或被杀死）的子进程的 PID，并将子进程的退出状态复制到传递给 wait 的地址。如果没有子进程退出，wait 将等待；如果没有子进程，wait 立即返回 -1。
-- **父子进程输出顺序**：父进程和子进程的输出顺序可能不同，取决于谁先到达 printf 调用。
-- **独立内存和寄存器**：父进程和子进程具有独立的内存和寄存器，更改一个进程中的变量不会影响另一个。
-- **exec 系统调用**： 系统调用 `exec` 将从某个*文件*（通常是可执行文件）里读取内存镜像，并将其替换到调用它的进程的内存空间。  
-
-```
-char *argv[3]; argv[0] = "echo"; argv[1] = "hello"; argv[2] = 0; exec("/bin/echo", argv); printf("exec error\n");
-```
-
- xv6 shell 用以上调用为用户执行程序 ，步骤如下：
-
-1.  主循环通过 `getcmd` 读取命令行的输入，然后它调用 `fork` 生成一个 shell 进程的副本。
-2. 父 shell 调用 `wait`，而子进程执行用户命令。
-
-举例来说，用户在命令行输入“echo hello”：
-
-1. `getcmd` 会以 `echo hello` 为参数调用 `runcmd`（7906）, 由 `runcmd` 执行实际的命令。
-2. 对于 `echo hello`, `runcmd` 将调用 `exec` 。
-3. 如果 `exec` 成功被调用，子进程就会转而去执行 `echo` 程序里的指令。
-4. 在某个时刻 `echo` 会调用 `exit`，这会使得其父进程从 `wait` 返回。  
-
-### (二) I/O and File descriptors
-
-文件描述符是一个整数，代表一个由内核管理的对象，进程可以通过它进行读写操作。
-
-
-
-read 和 write 系统调用从文件描述符命名的打开文件中读取字节并写入字节。调用 `read(fd, buf, n) `从文件描述符 fd 中读取最多 n 个字节，将它们复制到 buf 中，并返回读取的字节数。
-
-每个引用文件的文件描述符都有一个关联的偏移量。read 从当前文件偏移量读取数据，然后将该偏移量增加读取的字节数。
-
-
-
-#### IO 重定向
-
-重定向实现：通过使用 fork 和 exec 系统调用，shell 可以在不影响主进程 I/O 设置的情况下，重定向子进程的 I/O。例如，通过关闭标准输入文件描述符（0），然后打开一个新的文件，新的文件描述符将被分配为 0，从而实现输入重定向。
-
-```c
-char *argv[2];
-argv[0] = "cat";
-argv[1] = 0;
-if(fork() == 0) {
-    close(0);
-    open("input.txt", O_RDONLY);
-    exec("cat", argv);
-}
-```
-
-
-
-fork 和 exec 分开调用的好处在于，shell 可以在这两者之间重定向子进程的输入输出，而不会影响主 shell 的输入输出设置。如果把这两个调用合并成一个叫 forkexec 的系统调用，进行 I/O 重定向就会变得很麻烦。shell 可能需要在调用 forkexec 之前修改自己的 I/O 设置，然后再撤销这些修改；或者 forkexec 需要接受 I/O 重定向的指令作为参数；或者每个程序（比如 cat）都需要自己处理 I/O 重定向。这样做都不太方便。
-
-
-
-
-
-### (三) pipe
-
-管道是一个小的内核缓冲区，通过一对文件描述符暴露给进程，一个用于读取，一个用于写入。将数据写入管道的一端会使这些数据可以从管道的另一端读取。管道提供了一种进程间通信的方式。
-
-以下示例代码运行程序 wc，并将标准输入连接到管道的读取端：
-
-```c
-int p[2]; // 声明一个整型数组 p，用于存储管道的两个文件描述符
-char *argv[2]; // 声明一个字符指针数组 argv，用于存储传递给 wc 程序的参数
-argv[0] = "wc"; // 设置 argv[0] 为 "wc"，表示要执行的命令
-argv[1] = 0; // 设置 argv[1] 为 0（即 NULL），表示参数结束
-pipe(p); // 创建一个管道，将读取端分配给 p[0]，写入端分配给 p[1]
-/**
-*操作系统会创建一个新的子进程。此时的执行流程会分成两个分支：
-*父进程：fork() 返回子进程的 PID（非零值），执行 else 块内的代码。
-*子进程：fork() 返回 0，执行 if 块内的代码。
-*/
-if(fork() == 0) { 
-    close(0); // 关闭标准输入（文件描述符 0）
-    dup(p[0]); // 将管道的读取端复制到标准输入（文件描述符 0）
-    close(p[0]); // 关闭管道的读取端，因为它已经被复制到标准输入
-    close(p[1]); // 关闭管道的写入端，因为子进程不需要写入数据
-    exec("/bin/wc", argv); // 用 wc 程序替换当前进程，并传递参数
-} else { // 父进程
-    close(p[0]); // 关闭管道的读取端，因为父进程不需要读取数据
-    write(p[1], "hello world\n", 12); // 向管道的写入端写入 "hello world\n"
-    close(p[1]); // 关闭管道的写入端，表示写入结束
-}
-```
-
-
-
-当管道中没有数据可读的时候，读取操作会阻塞（等待数据写入或者指向写入端的文件描述符关闭）。所有指向写入端的文件描述符被关闭，读操作会返回 0，标识数据流的结束。
-
-**读取等待：**当管道中没有数据可读时，读取操作会阻塞，等待数据被写入或者所有指向写入端的文件描述符被关闭。
-
-**返回 0：**如果所有指向写入端的文件描述符都被关闭，读取操作会返回 0，这表示数据流的结束，就像读取到文件末尾一样。
-
-**阻塞读取**：读取操作会一直阻塞，直到确定不会有新数据到达。这是为了确保读取操作能够正确处理数据流的结束。
-
-**关闭写入端**：在执行 wc 程序之前，子进程需要关闭管道的写入端。如果不关闭，wc 程序的某个文件描述符可能会指向管道的写入端，这样 wc 就永远不会检测到文件结束符（EOF），导致程序无法正常结束。
-
-#### XV6 实现
-
-xv6 通过创建两个子进程来执行管道的左右两侧命令，并通过管道将它们连接在一起。左侧命令的输出被传递到右侧命令的输入。  
-
-```c
-  case PIPE:
-    pcmd = (struct pipecmd*)cmd;
-    if(pipe(p) < 0)
-      panic("pipe");
-    if(fork1() == 0){
-      close(1);
-      dup(p[1]);
-      close(p[0]);
-      close(p[1]);
-      runcmd(pcmd->left);
-    }
-    if(fork1() == 0){
-      close(0);
-      dup(p[0]);
-      close(p[0]);
-      close(p[1]);
-      runcmd(pcmd->right);
-    }
-    close(p[0]);
-    close(p[1]);
-    wait(0);
-    wait(0);
-    break;
-```
-
-
-
- xv6 的 shell 可以处理像 `grep fork sh.c | wc -l` 这样的命令，其中 `|` 表示管道。管道的作用是将一个命令的输出直接传递给下一个命令。
-
-- **创建管道**：子进程先创建一个管道，用于连接两个命令。
-- **执行命令**：然后，子进程会分别执行管道的左边和右边的命令，并且会等这两个命令都执行完成。
-
-如果右边的命令又包含管道，比如 `a | b | c`，那么 shell 会再创建两个新的子进程来分别处理 `b` 和 `c`。这样，整个结构就形成了一棵**进程树**，最底下的节点是实际的命令，而上面的节点则是用来等待它们完成的进程。
-
-#### 管道的优点
-
-1. **自动清理**：使用管道后，系统会自动处理相关资源的清理，而临时文件需要手动删除。
-2. **数据流长**：管道可以处理任意长度的数据流，而临时文件的存储空间有限，需要保证磁盘上有足够的空间。
-3. **并行执行**：管道可以让多个命令同时执行，而使用临时文件时，必须等第一个命令完成后，第二个命令才能开始执行。
-
-### (四) File system
-
-文件和目录结构：xv6 文件系统将数据文件和目录组织成树状结构，根目录为起点。路径可以是绝对路径（以 / 开头）或相对路径（相对于当前目录）。
-
-
-
-```c
-mkdir("/dir");
-fd = open("/dir/file", O_CREATE|O_WRONLY);
-close(fd);
-mknod("/console", 1, 1);
-```
-
-`mknod("/console", 1, 1)`：创建一个名为 /console 的设备文件。mknod 的两个参数 1, 1 分别是主设备号和次设备号，用于唯一标识内核设备。
-
-------
-
-#### 设备文件的作用
-
-**设备文件**：设备文件是特殊类型的文件，用于与硬件设备进行交互。它们通过主设备号和次设备号唯一标识。
-
-**系统调用重定向**：当进程打开设备文件时，内核会将读写系统调用重定向到相应的内核设备实现，而不是传递给文件系统。**这意味着对设备文件的操作实际上是在与硬件设备进行交互。**
-
-------
-
-#### inode
-
-文件的名称与文件本身是不同的；同一个底层文件（称为 inode）可以有多个名称（称为链接）。每个链接由目录中的一个条目组成；该条目包含文件名和对 inode 的引用。inode 保存文件的元数据，包括其类型（文件、目录或设备）、长度、文件内容在磁盘上的位置以及文件的链接数。
-
-```c
-#define T_DIR 1 // 目录
-#define T_FILE 2 // 文件
-#define T_DEVICE 3 // 设备
-
-struct stat {
-    int dev;       // 文件系统的磁盘设备
-    uint ino;      // inode 号
-    short type;    // 文件类型
-    short nlink;   // 文件的链接数
-    uint64 size;   // 文件大小（字节）
-};
-```
-
-**文件名与 inode**：文件名只是对文件的引用，实际文件由 inode 表示。一个 inode 可以有多个文件名（链接）。
-
-**inode 的元数据：**inode 包含文件的元数据，如类型、长度、磁盘位置和链接数。
-
-**fstat 系统调用：**fstat 用于从 inode 中检索文件信息，并填充 struct stat 结构体。
-
-**创建链接：**`link `系统调用创建一个新的文件名，引用相同的 inode。读取或写入任一文件名都会影响相同的底层文件内容。
-
-```c
-open("a", O_CREATE|O_WRONLY);
-link("a", "b");
-
-读取或写入 a 与读取或写入 b 是相同的。
-每个 inode 由唯一的 inode 号标识。
-执行上述代码序列后，
-可以通过检查 fstat 的结果确定 a 和 b 引用相同的底层内容：
-两者将返回相同的 inode 号（ino），并且 nlink 计数将设置为 2。
-```
-
-**删除链接**：unlink 系统调用删除文件名。当文件的链接数为零且没有文件描述符引用它时，inode 和磁盘空间才会被释放。
-
-**临时文件：**创建临时文件的一种常见方法是打开文件后立即删除其名称，这样文件在进程关闭文件描述符或退出时会被自动清理。
-
-```c
-fd = open("/tmp/xyz", O_CREATE|O_RDWR);
-unlink("/tmp/xyz");
-```
-
-------
-
-Unix 设计了一些文件操作命令，如 mkdir（创建目录）、ln（创建链接）和 rm（删除文件），作为用户级程序。这意味着这些命令是独立于内核的，可以由用户在命令行中调用。而其它系统通常将这些命令内置 shell 中，甚至将 shell 内置内核中。
-
-这种设计的好处是灵活性高，用户可以轻松地扩展命令行接口，添加新的命令和功能。
-
-cd 命令是一个例外，它必须内置在 shell 中。原因是 cd 需要更改 shell 本身的当前工作目录。
-
-为什么 cd 会内置在 shell 中呢？我们假设 cd 作为常规命令运行，shell 会创建一个子进程，子进程运行 cd 并更改其工作目录，但父进程（即 shell）的工作目录不会改变。这就达不到预期的效果。
-
-在 Unix 中，每个进程都有自己的当前工作目录。cd 命令需要直接影响 shell 进程的工作目录，因此必须内置在 shell 中，而不是作为独立的用户级程序运行。
-
-
-
-### (五)  Exercises  
-
- Write a program that uses UNIX system calls to “ping-pong” a byte between two processes over a pair of pipes, one for each direction. Measure the program’s performance, in ex changes per second.  
-
-```c
-#include "kernel/types.h"
-#include "user/user.h"
-int main(int argc, char const *argv[])
-{
-    int p2c[2], c2p[2];
-    pipe(p2c);
-    pipe(c2p);
-    char buff[4];
-
-    if (fork() == 0) { // child
-        close(c2p[0]); //close p2c read;
-        write(c2p[1],"pong",4);
-        close(c2p[1]); //close p2c write;
-
-        close(p2c[1]);//close write;
-        read(p2c[0],buff,4);
-        printf("%d received %s\n",getpid(),buff);
-        close(p2c[0]);
-
-
-    } else { // parent
-        close(p2c[0]); //close p2c read;
-        write(p2c[1],"ping",4);
-        close(p2c[1]); //close p2c write;
-
-        close(c2p[1]);//close write;
-        read(c2p[0],buff,4);
-        printf("%d received %s\n",getpid(),buff);
-        close(c2p[0]);
-    }
-}
-```
