--- a/source/_posts/6-S081.md
+++ b/source/_posts/6-S081.md
@@ -7,7 +7,7 @@ author:
  - LeoChamp
 ---
 
-## [LEC01](https://mp.weixin.qq.com/s?__biz=MzkyMDY3MjQ0OQ==&mid=2247484018&idx=1&sn=6015e6b757a4d9575dfeae9c65436aa5&chksm=c18e03dcf6f98acac01dbacb0fbd545effff5d1582b5ccc5040db278ea2da47cbbd3f083b768#rd)
+## [LEC01](https://github.com/liulchcn/LeoChampBlog/blob/main/source/resources/MIT6.S081.html)
 
 ------
 
