--- a/source/_posts/6-S081.md
+++ b/source/_posts/6-S081.md
@@ -7,13 +7,6 @@ author:
  - LeoChamp
 ---
 
-## [LEC01](https://github.com/liulchcn/LeoChampBlog/blob/main/source/resources/MIT6.S081.html)
-
-------
 
 
-
-## [LEC02](https://mp.weixin.qq.com/s?__biz=MzkyMDY3MjQ0OQ==&mid=2247484025&idx=1&sn=46e17e7b9d99ad9637e300e7e6807629&chksm=c18e03d7f6f98ac1467886141accf1f73a3b26c0aa2ad1aacf3718e4eceb19df89aea0c88032#rd)
-
-------
-
+{% include MIT6.S081.html %}
